# Automotive1722

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.sh
config/: dbc.dbc
docker/: Dockerfile  Readme.md
docs/: Readme.md
inc/: dummy.hpp
src/: CMakeLists.txt
src/agents/: CMakeLists.txt
src/agents/inc/: AgentFactory.hpp  IAgent.hpp
src/agents/src/: Agent.cpp  Agent.hpp  AgentFactory.cpp  CanAgent.cpp  CanAgent.hpp
src/aggregator/: CMakeLists.txt
src/aggregator/inc/: AggregatorFactory.hpp  IAggregator.hpp
src/aggregator/src/: Aggregator.cpp  Aggregator.hpp  AggregatorFactory.cpp  CanAggregator.cpp  CanAggregator.hpp  test_aggregator.cpp
src/apps/: CMakeLists.txt
src/apps/gui-app/: Readme.md
src/apps/gui-app/vehicle-app/: package-lock.json  package.json
src/apps/gui-app/vehicle-app/public/: index.html  manifest.json
src/apps/gui-app/vehicle-app/src/: App.js
src/apps/gui-app/vehicle-app/src/components/: Add.js  List.js  Search.js
src/apps/gui-app/vehicle-app/src/services/: DataService.js
src/apps/vss-can-1722/: CMakeLists.txt
src/apps/vss-can-1722/inc/: VssCanExchange.hpp
src/apps/vss-can-1722/src/: VssCanExchange.cpp  main.cpp
src/common/: CMakeLists.txt
src/common/avtp-util/: CMakeLists.txt
src/common/avtp-util/inc/: AvtpUtil.hpp
src/common/avtp-util/src/: AvtpUtil.cpp
src/common/can-codec/: CMakeLists.txt  Readme.md
src/common/can-codec/inc/: can_codec.h  datenbasis.h  uthash_lib.h
src/common/can-codec/src/: can_codec.c  can_encode_decode_inl.c  can_encode_decode_inl.h  datenbasis.c  process_frame.c  uthash.h
src/common/can-ieee/: CMakeLists.txt
src/common/can-reader/: CMakeLists.txt
src/common/can-reader/inc/: CanReader.hpp
src/common/can-reader/src/: CanReader.cpp
src/common/can-util/: CMakeLists.txt  Readme.md  dbc.dbc  main_dbc.cpp  test.dbc
src/common/can-util/inc/: CanDbc.hpp  ProcessCanMessage.hpp
src/common/can-util/src/: CanDbc.cpp  ProcessCanMessage.cpp
src/common/can-utils/: CMakeLists.txt
src/common/can-writer/: CMakeLists.txt
src/common/can-writer/inc/: CanWriter.hpp
src/common/can-writer/src/: CanWriter.cpp
src/common/comm/: CMakeLists.txt
src/common/comm-if/: CMakeLists.txt
src/common/comm-if/inc/: can_comm_if.h  ether_comm_if.h  lo_comm_if.h
src/common/comm-if/src/: can_comm_if.c  ether_comm_if.c  lo_comm_if.c
src/common/comm/inc/: can_common.h  ether_common.h
src/common/comm/src/: can_common.c  ether_common.c
src/common/data-handler/: CMakeLists.txt
src/common/data-handler/inc/: DataCallbackHandler.hpp  IDataObserver.hpp  IDataSubscriber.hpp
src/common/data-handler/src/: DataCallbackHandler.cpp
src/common/data-router/: CMakeLists.txt
src/common/data-router/inc/: Channel.hpp  DataRouter.hpp  IChannel.hpp
src/common/data-router/src/: Channel.cpp  Channel.hpp  DataRouter.cpp
src/common/decrypt-encrypt/: CMakeLists.txt
src/common/encrypt-decrypt/: CMakeLists.txt
src/common/ieee-can/: CMakeLists.txt
src/common/ieee-can/inc/: Ieee1722.hpp  Ieee1722Receiver.hpp  Ieee1722Transmitter.hpp  IeeeCanCommon.hpp
src/common/ieee-can/src/: Ieee1722.cpp  Ieee1722Receiver.cpp  Ieee1722Transmitter.cpp  IeeeUtil.cpp  IeeeUtil.hpp  main.cpp  main_tx.cpp
src/common/inc/: IeeeCanCommon.hpp  can_dbc_common.hpp
src/common/logger/: CMakeLists.txt
src/common/open1722/: CMakeLists.txt
src/common/receiver/: CMakeLists.txt
src/common/receiver/inc/: Ieee1722Receiver.hpp  Receiver.hpp
src/common/receiver/src/: Ieee1722Receiver.cpp  Receiver.cpp  main_rx.cpp
src/common/settings/: CMakeLists.txt
src/common/settings/inc/: ISettings.hpp  SettingsFactory.hpp
src/common/settings/src/: Settings.cpp  Settings.hpp  SettingsFactory.cpp  test_settings.cpp
src/common/transmitter/: CMakeLists.txt
src/common/transmitter/inc/: Transmitter.hpp
src/common/transmitter/src/: Ieee1722Transmitter.cpp  Transmitter.cpp  main_tx.cpp
src/common/utils/: CMakeLists.txt
src/common/utils/inc/: CommonUtils.hpp
src/common/utils/src/: CommonUtils.cpp
src/database/: CMakeLists.txt
src/exchange-manager/: CMakeLists.txt
src/manager/: CMakeLists.txt
src/manager/inc/: DataManager.hpp
src/manager/src/: DataManager.cpp  test_datamanager.cpp
src/mapper/: CMakeLists.txt  readme.md  vss.yaml  vss_dbc_mapper.json
src/mapper/inc/: VssMapper.hpp
src/mapper/src/: VssMapper.cpp  main_gen_json.cpp  test_vssmapper.cpp
src/storage/: CMakeLists.txt
src/storage/inc/: RedisConnection.hpp  RedisDatabase.hpp
src/storage/src/: RedisConnection.cpp  RedisDatabase.cpp  test_redisdatabase.cpp
src/tests/: CMakeLists.txt
src/tests/src/: generate_vss_json.cpp  test_aggregator.cpp  test_datamanager.cpp  test_dbc.cpp  test_receiver.cpp
