project(Common_Project)

add_subdirectory(open1722)
add_subdirectory(avtp-util)
add_subdirectory(comm-if)
add_subdirectory(utils)
add_subdirectory(data-handler)
add_subdirectory(receiver)
add_subdirectory(transmitter)
add_subdirectory(can-writer)
add_subdirectory(can-reader)
add_subdirectory(can-codec)
add_subdirectory(data-router)
add_subdirectory(can-util)
add_subdirectory(yaml-cpp)

add_subdirectory(settings)
add_subdirectory(logger)
